functionality of MainActivity
Get pollution records from api and split into good/bad records.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,14 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".MainActivity">
 
+	<data>
+
+		<variable
+			name="viewModel"
+			type="com.github.maxvuluy.airpollution.MainViewModel" />
+
+	</data>
+
 	<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
