--- a/app/src/main/res/layout/adapter_bad_record_list.xml
+++ b/app/src/main/res/layout/adapter_bad_record_list.xml
@@ -67,7 +67,7 @@
 					android:id="@+id/textViewCountry"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="@{record.country}"
+					android:text="@{record.county}"
 					android:textSize="@dimen/text_size_record"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent"
