--- a/app/src/main/res/layout/adapter_good_record_list.xml
+++ b/app/src/main/res/layout/adapter_good_record_list.xml
@@ -83,7 +83,7 @@
 				android:id="@+id/textViewCountry"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@{record.country}"
+				android:text="@{record.county}"
 				android:textSize="@dimen/text_size_record"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toStartOf="@id/textViewStatus"
@@ -96,6 +96,8 @@
 				android:id="@+id/textViewStatus"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:ellipsize="end"
+				android:maxLines="1"
 				android:text="@{record.status}"
 				android:textSize="@dimen/text_size_record"
 				app:layout_constraintBottom_toBottomOf="parent"
