--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,16 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".SearchActivity">
 
+	<data>
+
+		<import type="android.view.View" />
+
+		<variable
+			name="viewModel"
+			type="com.github.maxvuluy.airpollution.SearchViewModel" />
+
+	</data>
+
 	<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
@@ -25,7 +35,8 @@
 					android:id="@+id/editTextSearch"
 					android:layout_width="200dp"
 					android:layout_height="wrap_content"
-					android:hint="@string/search_hint" />
+					android:hint="@string/search_hint"
+					android:text="@={viewModel.siteName}" />
 
 			</androidx.appcompat.widget.Toolbar>
 
@@ -35,6 +46,7 @@
 			android:id="@+id/recyclerView"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:visibility="@{viewModel.recordList.empty ? View.GONE : View.VISIBLE}"
 			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 			app:layout_behavior="@string/appbar_scrolling_view_behavior"
 			tools:listitem="@layout/adapter_bad_record_list" />
@@ -44,7 +56,11 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+			android:gravity="center"
+			android:text="@{viewModel.emptyText}"
+			android:visibility="@{viewModel.recordList.empty ? View.VISIBLE : View.GONE}"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior"
+			tools:visibility="gone" />
 
 	</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
