--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
 
 	<data>
 
+		<import type="android.view.View" />
+
 		<variable
 			name="viewModel"
 			type="com.github.maxvuluy.airpollution.MainViewModel" />
@@ -59,6 +61,16 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/recyclerViewGood"
 				tools:listitem="@layout/adapter_bad_record_list" />
+
+			<ProgressBar
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:indeterminate="true"
+				android:visibility="@{viewModel.loaded == null ? View.VISIBLE : View.GONE}"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
 
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
